--- a/w3c-extended-iis.conf
+++ b/w3c-extended-iis.conf
@@ -1,6 +1,8 @@
 # vim: syntax=perl
 
 # This configuration files goes with the proxy-bluecoat.py script to generate the adequate columns.
+# ./proxy-bluecoat.py -c w3c-extended-iis.conf -l <yourlogfile>
+#
 # Please check https://github.com/cvandeplas/ELK-forensics for more information.
 # Created by Christophe Vandeplas <christophe@vandeplas.com>
 
