added type at output section, now configurations can live in the conf.d dir together

--- a/mactime.conf
+++ b/mactime.conf
@@ -46,8 +46,10 @@ filter {
 }
 
 output { 
-  elasticsearch {
-    index => "logstash-mactime"
-    host => localhost
+  if [type] == "mactime" {
+    elasticsearch {
+      index => "logstash-mactime"
+      host => localhost
+    }
   }
 }
