--- a/proxy-bluecoat.conf
+++ b/proxy-bluecoat.conf
@@ -121,11 +121,13 @@ filter {
 }
 
 output {
-  elasticsearch {
-    index => "logstash-%{[type]}-%{+YYYY.MM.dd}"
-    # custom schema
-#    template_overwrite => true
-#    template => "/etc/elasticsearch/elasticsearch-template.json"
-    host => "localhost"
+  if [type] == "proxy_bluecoat" {
+    elasticsearch {
+      index => "logstash-%{[type]}-%{+YYYY.MM.dd}"
+      host => "localhost"
+      # custom schema
+      #template_overwrite => true
+      #template => "/etc/elasticsearch/elasticsearch-template.json"
+    }
   }
 }
