--- a/proxy-iwsva.conf
+++ b/proxy-iwsva.conf
@@ -134,9 +134,11 @@ filter {
 }
 
 output {
-  elasticsearch {
-    index => "logstash-%{[type]}-%{+YYYY.MM.dd}"
-    host => "localhost"
+  if [type] == "proxy_fwd_iwsva" {
+    elasticsearch {
+      index => "logstash-%{[type]}-%{+YYYY.MM.dd}"
+      host => "localhost"
+    }
   }
 }
 
