--- a/w3c-extended-iis.conf
+++ b/w3c-extended-iis.conf
@@ -124,7 +124,6 @@ filter {
     # cs_cookie       - string - The content of the cookie sent or received, if any.
     # cs_referrer     - string - The site that the user last visited. This site provided a link to the current site.
 
-
     # cleanup
     mutate {
       remove_field => ["message", "date", "time"]
@@ -133,11 +132,13 @@ filter {
 }
 
 output {
-  elasticsearch {
-    index => "logstash-%{[type]}-%{+YYYY.MM.dd}"
-    # custom schema
-#    template_overwrite => true
-#    template => "/etc/elasticsearch/elasticsearch-template.json"
-    host => "localhost"
+  if [type] == "w3c_extended_iis" {
+    elasticsearch {
+      index => "logstash-%{[type]}-%{+YYYY.MM.dd}"
+      host => "localhost"
+      # custom schema
+      #template_overwrite => true
+      #template => "/etc/elasticsearch/elasticsearch-template.json"
+    }
   }
 }
