--- a/mactime.conf
+++ b/mactime.conf
@@ -3,6 +3,21 @@
 # Please check https://github.com/cvandeplas/ELK-forensics for more information.
 # Created by Christophe Vandeplas <christophe@vandeplas.com>
 
+# Import a mactime output file to your Elasticsearch database.
+# To generate the mactime file:
+# - first run 'fls' and output to a bodyfile
+# - then use 'mactime' to output to csv
+# - transfer the csv to logstash
+# Example:
+# fls -r -m  "/" –i win7-64-nfury-c-drive/win7-64-nfury-c-drive.E01  > win7-64-nfury-10.3.58.6-bodyfile.txt 
+# mactime -b win7-64-nfury-10.3.58.6-bodyfile.txt -d  > win7-64-nfury-10.3.58.6-mactime.csv
+# cat win7-64-nfury-10.3.58.6-mactime.csv | nc -vv 127.0.0.1 18001
+
+# Search examples: 
+# - ext:.pf
+# - deleted
+
+
 input {
   tcp {
     type => "mactime"
