unified the vim syntax

--- a/mail-imss.conf
+++ b/mail-imss.conf
@@ -1,4 +1,4 @@
-# vim: syntax=perl
+# vim: syntax=python
 
 # Please check https://github.com/cvandeplas/ELK-forensics for more information.
 # Created by Christophe Vandeplas <christophe@vandeplas.com>
