--- a/w3c-extended-iis.conf
+++ b/w3c-extended-iis.conf
@@ -1,4 +1,4 @@
-# vim: syntax=perl
+# vim: syntax=python
 
 # This configuration files goes with the proxy-bluecoat.py script to generate the adequate columns.
 # ./proxy-bluecoat.py -c w3c-extended-iis.conf -l <yourlogfile>
