Added plaso configuration and documentation.

--- a/plaso.conf
+++ b/plaso.conf
@@ -5,8 +5,13 @@
 # Inspired from http://blog.kiddaland.net/2013/11/visualize-output.html
 
 # Make sure you are using plaso v1.1 or higher.
-# Before using plaso with elasticsearch we first need to install some python bindings.
+# Before using plaso with elasticsearch you first need to install some python bindings.
 # sudo pip install pyelasticsearch
 # 
 # log2timeline.py plaso.dump /path/to/disk/image
 # psort -o elastic plaso.dump
+# There is no need to use logstash as data is directly stored in elasticsearch
+
+# You can also export to l2tcsv and then import the csv using logstash. However you will loose some data.
+# If you choose the l2tcsv export, check out the other configuration and dashboard provided.
+
