--- a/plaso.conf
+++ b/plaso.conf
@@ -12,6 +12,10 @@
 # psort -o elastic plaso.dump
 # There is no need to use logstash as data is directly stored in elasticsearch
 
+# A simple dashboard is provided here: https://plaso.googlecode.com/git/extra/plaso_kibana_example.json
+# More dashboard love will come in the near future. 
+
+
 # You can also export to l2tcsv and then import the csv using logstash. However you will loose some data.
-# If you choose the l2tcsv export, check out the other configuration and dashboard provided.
+# If you choose the l2tcsv export, check out the other configuration and dashboard provided in this ELK-forensics repository
 
