fix for localtime date format

--- a/proxy-bluecoat.conf
+++ b/proxy-bluecoat.conf
@@ -48,8 +48,8 @@ filter {
         match => ["gmttime", "dd/MM/YYYY:HH:mm:ss' GMT'"] 
         timezone => ['UTC']
       } 
-#    } else if [localtime] {     # TODO - fix the timezone format
-#      date { match => ["localtime", "dd/MMM/YYYY:HH:mm:ss +nnnn"] } 
+    } else if [localtime] {
+      date { match => ["localtime", "[dd/MMM/YYYY:HH:mm:ss Z]"] }
     } else if [date] and [time] {
       mutate { merge => ["date", "time"] }   # merge and join need to be in 2 separate mutates
       mutate { join => ["date", " "] }       # merge and join need to be in 2 separate mutates
