--- a/plaso.l2tcsv.conf
+++ b/plaso.l2tcsv.conf
@@ -83,7 +83,7 @@ output {
   if [type] == "l2tcsv" {
     elasticsearch {
       index => "logstash-l2tcsv"
-      host => localhost
+      hosts => localhost
     }
   }
 }
